gccida/g1/split_di
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_di/src/i386.c:6728:68: error: use of undeclared identifier 'machine_mode'
lo_half[v6 / 8] = simplify_gen_subreg( SImode, operands[v6 / 8], ( machine_mode)v8, 0); 
                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_di/src/i386.c:6732:54: error: use of undeclared identifier 'machine_mode'
hi_half[v6 / 8] = simplify_gen_subreg( SImode, v7, ( machine_mode)v9, 4u); 
                                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_di/src/obj/i386.o] Error 1
